# projekttagebuch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  config.example.toml  tailwind.config.js
.sqlx/: query-02ba4be78b8a57d4829b743ea3f4a8daa2b59b0e1f5d2e89b8ecff6cd37bdd77.json  query-0c96bbb66cc7b9984063ee37cdefe581ce9bc136eecd2b4fd9d4b8d42ab70060.json  query-223eac62b40be90c27bd0b4d7833384391538d56fba99b236d01125a4376bb32.json  query-32d52aba4d02229994657ff7954022811c3263b2fc7108fad2ce998a006a6820.json  query-3532937e58ed8403884faf333f289ee600817af267c623d2d8ac805098963295.json  query-39c98ed06edd54b18a3738932f75d4c63fa76c3ec2e4b664842decba8c823b3e.json  query-3a44531341a322bfda3fd32dacd69e32f39449d7444ca51928da1d427a980d64.json  query-4d7ab384cd8e8be7db732967af237ced163e83e7ac4ce0d8e5db7abba55760ee.json  query-4fcfbf7c77bde9cdf55900424db7a36304901ca12ece472cd938614b369c4db2.json  query-5594379bb41c1b3edae166d5d5eadcbe29b97889c13d6520dbdc09bd365c4249.json  query-59c20ac87896221e2f1c8504a7864224f6b0a9c7bbe204fb0eeed145beb6cfc9.json  query-5ef4abe9318d4ab8124b711f84df546af034e7c82ac18a544c13cc3179f4e4d4.json  query-6fb391f189c4852ba4ee469fbb6a368c7ca8037d5459202a4fd50460f01e4526.json  query-7781f47e37267dae12012a6fb58945353e2152a5a91ec64b4e1cd8d8034fcd77.json  query-782af9ed929857f4ac3013fa1c313135dbc458e134e1a677088315d2d47d9dd3.json  query-8254b48c59fb0d48d1d309bc49bfe71e3b1f80200622e7259eeddfc747637aaa.json  query-97e771884a6061234bc80c7812a661e4dc6ac154d155eadc1ff732d56866e32c.json  query-ad879f86508a4d823545158d9aa1fba2014af1221febedb18a1553ff823c452e.json  query-ae236f80ce8bc316e72dd6870d12632dec35c9899cce7337b51f4b6757911f83.json  (+6 more)
migrations/: 001_person.up.sql  (+10 more)
(+39 files in other folders)
