[package]
name = "projekttagebuch"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Schleucher"]

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros", "signal"] }
sqlx = { version = "0.8.3", features = ["sqlite", "postgres", "runtime-tokio-rustls", "tls-rustls"] }
time = { version = "0.3.36", features = ["formatting", "local-offset"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["time", "fmt", "env-filter"] }
axum = { version="0.7.5", features = ["form"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum-login = "0.16.0"
ldap3 = { version = "0.11.5", default-features = false, features = ["tls-rustls"] }
axum-messages = "0.6.1"
askama_axum = "0.4.0"
askama = { version = "0.12.1", features = ["with-axum"] }
tower = "0.4.13"
tower-sessions = { version = "0.13.0", default-features = false, features = [
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.14.0", features = ["sqlite"] }
uuid = { version = "1.10.0", features = ["v4"] }
# only so that we can install a default crypto provider.
# used only transitively by some other dependencies
rustls = { version = "0.23.23", default-features = false, features = ["ring"]}
async-trait = "0.1.85"
toml = "0.8.19"
# used only to force it to bundle for a statically linked libsqlite
rusqlite = { version = "0.32.1", features = ["bundled"] }
matrix-sdk = { version = "0.10.0" }
urlencoding = "2.1.3"

[dev-dependencies]
dotenv = "0.15.0"

